// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockaid Banner Alert should render 'danger' UI when securityAlertResponse.result_type is 'Malicious 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-danger mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-error-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-error-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      This is a deceptive request
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      If you approve this request, a third party known for scams might take all your assets.
    </p>
    <div
      class="mm-box mm-box--margin-top-3"
    >
      <div
        class="disclosure"
        data-testid="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Malicious%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render 'warning' UI when securityAlertResponse.result_type is 'Error 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      This is a deceptive request
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      If you approve this request, a third party known for scams might take all your assets.
    </p>
    <div
      class="mm-box mm-box--margin-top-3"
    >
      <div
        class="disclosure"
        data-testid="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22error%22%2C%22resultType%22%3A%22Error%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render 'warning' UI when securityAlertResponse.result_type is 'Warning 1`] = `
<div
  class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
  data-testid="security-provider-banner-alert"
>
  <span
    class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
    style="mask-image: url('./images/icons/danger.svg');"
  />
  <div
    class="mm-box mm-box--min-width-0"
  >
    <p
      class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
    >
      Be careful
    </p>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
    >
      This could be a deceptive request. Only continue if you trust every address involved.
    </p>
    <div
      class="mm-box mm-box--margin-top-3"
    >
      <div
        class="disclosure"
        data-testid="disclosure"
      >
        <details>
          <summary
            class="disclosure__summary is-arrow"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
            >
              See details
            </p>
            <span
              class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
              style="mask-image: url('./images/icons/arrow-up.svg');"
            />
          </summary>
          <div
            class="disclosure__content normal"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
            >
              <span>
                 
                Something doesn't look right? 
                <a
                  class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                  href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Report an issue
                </a>
                
                 
              </span>
            </p>
          </div>
          <div
            class="disclosure__footer"
          />
        </details>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
    >
      <span
        class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
        style="mask-image: url('./images/icons/security-tick.svg');"
      />
      <span>
         
        Powered by 
        <a
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
          href="https://blockaid.io/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Blockaid
        </a>
        
         
      </span>
    </p>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render details section even when features is not provided 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        Be careful
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        This could be a deceptive request. Only continue if you trust every address involved.
      </p>
      <div
        class="mm-box mm-box--margin-top-3"
      >
        <div
          class="disclosure"
          data-testid="disclosure"
        >
          <details>
            <summary
              class="disclosure__summary is-arrow"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
              >
                See details
              </p>
              <span
                class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
                style="mask-image: url('./images/icons/arrow-up.svg');"
              />
            </summary>
            <div
              class="disclosure__content normal"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
              >
                <span>
                   
                  Something doesn't look right? 
                  <a
                    class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                    href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Report an issue
                  </a>
                  
                   
                </span>
              </p>
            </div>
            <div
              class="disclosure__footer"
            />
          </details>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render details when provided 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        Be careful
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        This could be a deceptive request. Only continue if you trust every address involved.
      </p>
      <div
        class="mm-box mm-box--margin-top-3"
      >
        <div
          class="disclosure"
          data-testid="disclosure"
        >
          <details>
            <summary
              class="disclosure__summary is-arrow"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
              >
                See details
              </p>
              <span
                class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
                style="mask-image: url('./images/icons/arrow-up.svg');"
              />
            </summary>
            <div
              class="disclosure__content normal"
            >
              <ul
                class="mm-box mm-text mm-text--body-md mm-text--overflow-wrap-break-word mm-box--color-text-default"
              >
                <li>
                  • 
                  Operator is an EOA
                </li>
                <li>
                  • 
                  Operator is untrusted according to previous activity
                </li>
              </ul>
              <p
                class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
              >
                <span>
                   
                  Something doesn't look right? 
                  <a
                    class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                    href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%2C%22reproduce%22%3A%22%5B%5C%22Operator%20is%20an%20EOA%5C%22%2C%5C%22Operator%20is%20untrusted%20according%20to%20previous%20activity%5C%22%5D%22%7D&utm_source=metamask-ppom"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Report an issue
                  </a>
                  
                   
                </span>
              </p>
            </div>
            <div
              class="disclosure__footer"
            />
          </details>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Blockaid Banner Alert should render link to report url 1`] = `
<div>
  <div
    class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
    data-testid="security-provider-banner-alert"
  >
    <span
      class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
      style="mask-image: url('./images/icons/danger.svg');"
    />
    <div
      class="mm-box mm-box--min-width-0"
    >
      <p
        class="mm-box mm-text mm-text--body-lg-medium mm-box--color-text-default"
      >
        Be careful
      </p>
      <p
        class="mm-box mm-text mm-text--body-md mm-box--margin-top-2 mm-box--color-text-default"
      >
        This could be a deceptive request. Only continue if you trust every address involved.
      </p>
      <div
        class="mm-box mm-box--margin-top-3"
      >
        <div
          class="disclosure"
          data-testid="disclosure"
        >
          <details>
            <summary
              class="disclosure__summary is-arrow"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--color-primary-default"
              >
                See details
              </p>
              <span
                class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-start-2 mm-box--display-inline-block mm-box--color-primary-default"
                style="mask-image: url('./images/icons/arrow-up.svg');"
              />
            </summary>
            <div
              class="disclosure__content normal"
            >
              <p
                class="mm-box mm-text mm-text--body-md mm-box--margin-top-3 mm-box--display-flex mm-box--color-text-default"
              >
                <span>
                   
                  Something doesn't look right? 
                  <a
                    class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
                    href="https://blockaid-false-positive-portal.metamask.io?data=%7B%22blockaidVersion%22%3A%221.5.2%22%2C%22classification%22%3A%22set_approval_for_all%22%2C%22resultType%22%3A%22Warning%22%7D&utm_source=metamask-ppom"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Report an issue
                  </a>
                  
                   
                </span>
              </p>
            </div>
            <div
              class="disclosure__footer"
            />
          </details>
        </div>
      </div>
      <p
        class="mm-box mm-text mm-text--body-sm mm-box--margin-top-3 mm-box--display-flex mm-box--align-items-center mm-box--color-text-alternative"
      >
        <span
          class="mm-box disclosure__summary--icon mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-primary-default"
          style="mask-image: url('./images/icons/security-tick.svg');"
        />
        <span>
           
          Powered by 
          <a
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            href="https://blockaid.io/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Blockaid
          </a>
          
           
        </span>
      </p>
    </div>
  </div>
</div>
`;
